Already present tests now simulate the ClientController too.
Signed-off-by: Diubi <me@diubi.dev>